--- a/src/components/Btn/Btn.module.css
+++ b/src/components/Btn/Btn.module.css
@@ -5,7 +5,6 @@
     bottom: 0;
     left: 50%;
     transform: translate(-50%);
-    /* width: 150px; */
     font-family: "Inter";
     font-weight: 400;
     font-size: 25px;
@@ -19,4 +18,6 @@
     width: 210px;
     height: 57px;
     border-radius: 20px;
+    background-color: rgb(23, 34, 34, 0);
+    cursor: pointer;
   }
