--- a/src/components/News/NewsList.module.css
+++ b/src/components/News/NewsList.module.css
@@ -1,7 +1,7 @@
 .news_block {
   width: 100%;
   height: 495px;
-  background: #c8c8c8;
+  /* background: #c8c8c8; */
   margin: 0 auto;
   position: relative;
 }
@@ -12,6 +12,7 @@
   font-family: "Montserrat";
   font-weight: 700;
   font-size: 40px;
+  color: #414141;
 }
 
 
